@@ -1,3 +1,8 @@
+2003-07-09  Johan Dahlin  <jdahlin@async.com.br>
+
+	* src/file-manager/fm-properties-window.c: Add support for total
+	size and total count for multi-file property dialogs. 
+
 2003-07-08  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-directory-async.c: (is_needy):
